feat: new event beforeRecipes